# orm-cxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  Dummy_8hpp_source.html  LICENSE  README.md  ROADMAP.md  TODO.md  annotated.html  annotated_dup.js  classes.html  classorm_1_1Database-members.html  classorm_1_1Database.html  classorm_1_1Database.js  classorm_1_1Model-members.html  classorm_1_1Model.html  classorm_1_1Model.js  classorm_1_1ProjectionQuery-members.html  classorm_1_1ProjectionQuery.html  classorm_1_1Query-members.html  classorm_1_1Query.html  classorm_1_1Query.js  classorm_1_1Update-members.html  classorm_1_1Update.html  codecov.yml  database_8hpp_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_faea5f66b26404bd93e8e144147c8d7c.html  dir_faea5f66b26404bd93e8e144147c8d7c.js  dir_faea5f66b26404bd93e8e144147c8d7c_dep.map  dir_faea5f66b26404bd93e8e144147c8d7c_dep.md5  doxygen_crawl.html  files.html  (+20 more)
.github/: FUNDING.yml
.github/workflows/: linux-clang-build.yml  linux-gxx-build.yml  publish-docs.yml  test-report.yml  windows-msvc-build.yml
cmake/: cmake-coverage.cmake
docs/: database.md  main.md  model.md  partial-result-queries.md  query.md
examples/: CMakeLists.txt  main.cpp
include/orm-cxx/: Dummy.hpp  database.hpp  model.hpp  orm.hpp  projection_query.hpp  query.hpp  update.hpp
include/orm-cxx/database/: BackendType.hpp  CommandGenerator.hpp  CommandGeneratorFactory.hpp  SelectStatement.hpp  Statement.hpp  TypeTranslator.hpp  TypeTranslatorFactory.hpp
include/orm-cxx/database/binding/: Binding.hpp  BindingConcepts.hpp  BindingInfo.hpp  BindingPayload.hpp  GetObjectFromValues.hpp  ObjectFieldFromValues.hpp  ObjectFieldToValues.hpp  ProjectionBinding.hpp  SetObjectToValues.hpp  SociConvertationConcepts.hpp
include/orm-cxx/database/commands/: CreateTableCommand.hpp  DeleteCommand.hpp  DropTableCommand.hpp  InsertCommand.hpp  SelectCommand.hpp  UpdateCommand.hpp
include/orm-cxx/model/: AutoIncrementInfo.hpp  Binding.hpp  ColumnInfo.hpp  ColumnInfoType.hpp  ColumnType.hpp  ForeginIdsInfo.hpp  ForeginIdsInfoType.hpp  GetForeignModelInfoFromField.hpp  GetModelInfo.hpp  IdInfo.hpp  ModelInfo.hpp  NameMapping.hpp  TableInfo.hpp  columns.hpp  name.hpp
include/orm-cxx/query/: Condition.hpp  Operator.hpp  OrderBy.hpp  Predicate.hpp  Projection.hpp  QueryData.hpp  QueryValue.hpp  UpdateData.hpp
include/orm-cxx/reflection/: TypeName.hpp
include/orm-cxx/utils/: ConstexprFor.hpp  ConstexprStringView.hpp  DisableExternalsWarning.hpp  StringUtils.hpp
scripts/: build_and_test_linux_gxx.sh  build_linux_gxx.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  pages_1.js  pages_10.js  pages_11.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  (+12 more)
src/: Database.cpp  Dummy.cpp  DummyTest.cpp  database.cpp
src/database/: CommandGenerator.cpp  CommandGeneratorFactory.cpp  TypeTranslatorFactory.cpp
src/database/defaults/: DefaultCreateTableCommand.cpp  DefaultCreateTableCommand.hpp  DefaultCreateTableCommandTest.cpp  DefaultDeleteCommand.cpp  DefaultDeleteCommand.hpp  DefaultDeleteCommandTest.cpp  DefaultDropTableCommand.cpp  DefaultDropTableCommand.hpp  DefaultDropTableCommandTest.cpp  DefaultInsertCommand.cpp  DefaultInsertCommand.hpp  DefaultInsertCommandTest.cpp  DefaultSelectCommand.cpp  DefaultSelectCommand.hpp  DefaultSelectCommandTest.cpp  DefaultUpdateCommand.cpp  DefaultUpdateCommand.hpp  DefaultUpdateCommandTest.cpp  SqlRenderer.cpp  SqlRenderer.hpp
src/database/sqlite/: SqliteCommandGenerator.cpp  SqliteCommandGenerator.hpp  SqliteCommandGeneratorTest.cpp  SqliteTypeTranslator.cpp  SqliteTypeTranslator.hpp  SqliteTypeTranslatorTest.cpp
src/model/: ColumnType.cpp  ColumnTypeTest.cpp
src/query/: Condition.cpp  ConditionTest.cpp  PredicateTest.cpp  ProjectionQueryTest.cpp  QueryValueTest.cpp
src/utils/: StringUtils.cpp  StringUtilsTest.cpp
tests/: DatabaseTest.cpp  ModelTest.cpp  ModelsDefinitions.hpp  QueryTest.cpp
tests/Model/: IdInfoTest.cpp
tests/database/: BaseOperationsTest.cpp  DatabaseTest.hpp  IdModelsTest.cpp  ProjectionQueryTest.cpp  QueryLanguageTest.cpp  RelatedModelTest.cpp  SimpelModelTest.cpp  SimpleModelTest.cpp  StatementParameterBindingTest.cpp  TransactionsTest.cpp  WriteOperationsTest.cpp
tests/model/: IdInfoTest.cpp  TableInfoTest.cpp
tests/reflection/: TypeNameTest.cpp
tests/utils/: ConstexprForTest.cpp  ConstexprStringViewTest.cpp  FakeDatabase.hpp  GenerateModels.hpp
